--- a/app/src/main/res/layout/coin_item.xml
+++ b/app/src/main/res/layout/coin_item.xml
@@ -15,12 +15,12 @@
         android:id="@+id/card_view"
         style="@style/Widget.Material3.CardView.Elevated"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/coin_list_item_height"
+        android:layout_height="@dimen/coin_item_height"
         android:layout_gravity="center"
         app:cardCornerRadius="0dp"
         app:cardElevation="0dp"
-        app:contentPaddingLeft="@dimen/coins_list_item_padding"
-        app:contentPaddingRight="@dimen/coins_list_item_padding">
+        app:contentPaddingLeft="@dimen/default_padding"
+        app:contentPaddingRight="@dimen/default_padding">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -40,9 +40,9 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/img_coin"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="4dp"
+                android:layout_width="@dimen/coin_logo"
+                android:layout_height="@dimen/coin_logo"
+                android:layout_marginLeft="@dimen/default_padding_tiny"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -53,8 +53,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical"
-                android:paddingStart="12dp"
-                android:paddingEnd="6dp"
+                android:paddingStart="@dimen/default_padding"
+                android:paddingEnd="@dimen/default_padding_tiny"
                 app:layout_constraintStart_toEndOf="@+id/img_coin">
 
                 <com.google.android.material.textview.MaterialTextView
