--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -19,8 +19,8 @@
             android:id="@+id/btn_next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="34dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginEnd="@dimen/welcome_horizontal_margin"
+            android:layout_marginBottom="@dimen/welcome_vertical_margin"
             android:text="@string/btn_next"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -29,12 +29,9 @@
             android:id="@+id/tab_indicator"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="@dimen/welcome_horizontal_margin"
             app:ci_drawable="@drawable/indicator_radius"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btn_next"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/btn_next">
 
@@ -44,10 +41,10 @@
             android:id="@+id/btn_get_started"
             android:layout_width="132dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="16dp"
-            android:padding="5dp"
+            android:layout_marginStart="@dimen/default_padding_small"
+            android:layout_marginEnd="@dimen/default_padding_small"
+            android:layout_marginBottom="@dimen/default_padding"
+            android:padding="@dimen/default_padding_tiny"
             android:text="@string/btn_get_started"
             android:textAllCaps="false"
             android:visibility="invisible"
@@ -59,10 +56,10 @@
             android:id="@+id/tv_skip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="34dp"
-            android:paddingTop="24dp"
-            android:paddingRight="34dp"
-            android:paddingBottom="24dp"
+            android:paddingLeft="@dimen/welcome_horizontal_margin"
+            android:paddingTop="@dimen/welcome_vertical_margin"
+            android:paddingRight="@dimen/welcome_horizontal_margin"
+            android:paddingBottom="@dimen/welcome_vertical_margin"
             android:text="@string/tv_skip"
             android:textAppearance="?attr/textAppearanceLabelLarge"
             android:textColor="?attr/colorOnBackground"
