--- a/app/src/main/res/layout/item_walk_through.xml
+++ b/app/src/main/res/layout/item_walk_through.xml
@@ -11,7 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="30dp">
+        android:padding="@dimen/default_padding_big">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/gl_start"
@@ -44,7 +44,7 @@
             android:id="@+id/tv_walk_through_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_margin="@dimen/default_padding"
             android:elegantTextHeight="true"
             android:text="@{title}"
             android:textAlignment="center"
@@ -60,7 +60,7 @@
             android:id="@+id/tv_walk_through_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/default_padding_small"
             android:elegantTextHeight="true"
             android:gravity="center"
             android:text="@{description}"
