--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -78,7 +78,7 @@
     <color name="md_theme_dark_errorContainer">#93000A</color>
     <color name="md_theme_dark_onError">#690005</color>
     <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
-    <color name="md_theme_dark_background">#191C1E</color>
+    <color name="md_theme_dark_background">#111416</color>
     <color name="md_theme_dark_onBackground">#E2E2E5</color>
     <color name="md_theme_dark_outline">#8B9198</color>
     <color name="md_theme_dark_inverseOnSurface">#191C1E</color>
@@ -88,7 +88,7 @@
     <color name="md_theme_dark_surfaceTint">#86CFFF</color>
     <color name="md_theme_dark_outlineVariant">#41484D</color>
     <color name="md_theme_dark_scrim">#000000</color>
-    <color name="md_theme_dark_surface">#111416</color>
+    <color name="md_theme_dark_surface">#191C1E</color>
     <color name="md_theme_dark_onSurface">#C5C6C9</color>
     <color name="md_theme_dark_surfaceVariant">#41484D</color>
     <color name="md_theme_dark_onSurfaceVariant">#C1C7CE</color>
