feat: update navigation fragment layout

--- a/app/src/main/res/layout/fragment_coins_menu.xml
+++ b/app/src/main/res/layout/fragment_coins_menu.xml
@@ -21,6 +21,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_coins"
+                style="Nested"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:itemCount="20"
