--- a/app/src/main/res/layout/fragment_coin_menu.xml
+++ b/app/src/main/res/layout/fragment_coin_menu.xml
@@ -25,7 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:itemCount="20"
-                tools:listitem="@layout/coin_item" />
+                tools:listitem="@layout/item_coin" />
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         <ProgressBar
@@ -70,7 +70,7 @@
                 style="@style/CN_SearchBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="?attr/statusBarColor"
+                android:backgroundTint="?attr/android:colorBackground"
                 android:hint="@string/hint_search"
                 app:defaultMarginsEnabled="false" />
         </com.google.android.material.appbar.AppBarLayout>
