--- a/app/src/main/res/layout/item_coin_search.xml
+++ b/app/src/main/res/layout/item_coin_search.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <variable name="rank" type="String" />
+        <variable name="rank" type="int" />
         <variable name="name" type="String" />
         <variable name="symbol" type="String" />
     </data>
@@ -75,7 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:minEms="2"
-                android:text="@{rank}"
+                android:text='@{"#" + rank}'
                 android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                 tools:text="1234" />
 
