--- a/app/src/main/res/layout/fragment_bookmarks.xml
+++ b/app/src/main/res/layout/fragment_bookmarks.xml
@@ -2,23 +2,23 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <data>
-        <variable name="bookmark_error" type="String"/>
+        <variable name="error_coin_bookmarks" type="String"/>
     </data>
-
-    <RelativeLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-            android:id="@+id/srl_bookmark_coins"
+            android:id="@+id/srl_coin_bookmarks"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/coin_appbar_height"
             app:layout_behavior="@string/searchbar_scrolling_view_behavior"
             tools:ignore="PrivateResource">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_bookmark_coins"
+                android:id="@+id/rv_coin_bookmarks"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:itemCount="20"
@@ -26,7 +26,7 @@
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         <ProgressBar
-            android:id="@+id/pb_bookmarks"
+            android:id="@+id/pb_coin_bookmarks"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -35,28 +35,67 @@
             tools:visibility="invisible" />
 
         <ImageView
-            android:id="@+id/icon_bookmark_error"
+            android:id="@+id/icon_error_coin_bookmarks"
             android:layout_width="@dimen/error_icon_width"
             android:layout_height="@dimen/error_icon_height"
             android:layout_centerInParent="true"
+            android:layout_gravity="center"
             android:importantForAccessibility="no"
             android:src="@drawable/bookmarks_outlined"
             android:visibility="gone"
             tools:visibility="invisible" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/text_bookmark_error"
+            android:id="@+id/text_error_coin_bookmark"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/icon_bookmark_error"
+            android:layout_below="@id/icon_error_coin_bookmarks"
             android:layout_centerInParent="true"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/error_icon_height"
             android:gravity="center"
-            android:text="@{bookmark_error}"
+            android:text="@{error_coin_bookmarks}"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
             android:visibility="gone"
             tools:text="Error was caused because of.."
             tools:visibility="invisible" />
-    </RelativeLayout>
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:layout_width="match_parent"
+                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed|snap"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chip_coin_bookmark_sort"
+                    style="@style/Widget.Material3.Chip.Input.Icon.Elevated"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/default_padding"
+                    android:layout_marginTop="@dimen/coin_search_bar_height"
+                    android:layout_marginBottom="@dimen/default_padding_small"
+                    android:checkable="false"
+                    android:checked="false"
+                    android:elevation="0dp"
+                    android:text="@string/sort_by"
+                    app:closeIcon="@drawable/sort"
+                    app:layout_collapseMode="pin"
+                    tools:text="Sort by" />
+                <com.google.android.material.search.SearchBar
+                    android:id="@+id/search_bar_coin_bookmarks"
+                    style="@style/CN_SearchBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="?attr/android:colorBackground"
+                    android:hint="@string/hint_search"
+                    app:defaultMarginsEnabled="false"
+                    app:layout_collapseMode="pin"/>
+
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </layout>
