--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,10 @@
             @style/ShapeAppearance.Material3.Corner.None
         </item>
     </style>
+
+    <style name="CN_SearchView" parent="Widget.AppCompat.SearchView">
+        <item name="android:textColorHint">?attr/colorOnSurface</item>
+    </style>
     <style name="CN_BottomNavigation" parent="Widget.Material3.BottomNavigationView">
         <item name="android:color">?attr/colorSurfaceVariant</item>
         <item name="itemActiveIndicatorStyle">@style/CN_BottomNavigation.Active</item>
