--- a/app/src/main/res/layout/fragment_bookmarks.xml
+++ b/app/src/main/res/layout/fragment_bookmarks.xml
@@ -84,15 +84,25 @@
                     app:closeIcon="@drawable/sort"
                     app:layout_collapseMode="pin"
                     tools:text="Sort by" />
-                <com.google.android.material.search.SearchBar
-                    android:id="@+id/search_bar_coin_bookmarks"
-                    style="@style/CN_SearchBar"
+
+                <Toolbar
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="?attr/android:colorBackground"
-                    android:hint="@string/hint_search"
-                    app:defaultMarginsEnabled="false"
-                    app:layout_collapseMode="pin"/>
+                    android:background="?attr/android:colorBackground"
+                    android:contentInsetStart="0dp"
+                    app:layout_collapseMode="pin">
+
+                    <androidx.appcompat.widget.SearchView
+                        android:id="@+id/search_bar_coin_bookmarks"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:iconifiedByDefault="false"
+                        app:layout_collapseMode="pin"
+                        app:queryBackground="@android:color/transparent"
+                        app:queryHint='@string/hint_search'
+                        app:submitBackground="@android:color/transparent" />
+                </Toolbar>
+
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
         </com.google.android.material.appbar.AppBarLayout>
