--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -38,6 +38,8 @@
         <item name="background_ripple">@color/background_light_ripple</item>
 
         <item name="growth">@color/growth_light</item>
+
+        <item name="android:textColorHint">?attr/colorOnSurface</item>
     </style>
 
     <style name="Theme.App.Starting" parent="Theme.SplashScreen">
