--- a/app/src/main/res/layout/dialog_coin_sort.xml
+++ b/app/src/main/res/layout/dialog_coin_sort.xml
@@ -14,86 +14,99 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <CheckBox
-                android:id="@+id/dialog_coin_sort_rank"
-                style="@style/CN_DialogItem"
+            <RadioGroup
+                android:id="@+id/rg_sort_type"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/drag_handle"
-                android:button="@android:color/transparent"
-                android:text="@string/sort_by_rank"
-                app:drawableStartCompat="@drawable/star" />
+                android:layout_below="@id/drag_handle">
 
-            <CheckBox
-                android:id="@+id/dialog_coin_sort_name"
-                style="@style/CN_DialogItem"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/dialog_coin_sort_rank"
-                android:button="@android:color/transparent"
-                android:text="@string/sort_by_name"
-                app:drawableStartCompat="@drawable/sort_by_alpha" />
+                <androidx.appcompat.widget.AppCompatRadioButton
+                    android:id="@+id/dialog_coin_sort_rank"
+                    style="@style/CN_DialogItem.Sort"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:checked="true"
+                    android:text="@string/sort_by_rank"
+                    app:drawableStartCompat="@drawable/star" />
 
-            <CheckBox
-                android:id="@+id/dialog_coin_sort_price"
-                style="@style/CN_DialogItem"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/dialog_coin_sort_name"
-                android:button="@android:color/transparent"
-                android:text="@string/sort_by_price"
-                app:drawableStartCompat="@drawable/payments" />
+                <androidx.appcompat.widget.AppCompatRadioButton
+                    android:id="@+id/dialog_coin_sort_name"
+                    style="@style/CN_DialogItem.Sort"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sort_by_name"
+                    app:drawableStartCompat="@drawable/sort_by_alpha" />
 
-            <CheckBox
-                android:id="@+id/dialog_coin_sort_market"
-                style="@style/CN_DialogItem"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/dialog_coin_sort_price"
-                android:button="@android:color/transparent"
-                android:text="@string/sort_by_market"
-                app:drawableStartCompat="@drawable/account_balance" />
+                <androidx.appcompat.widget.AppCompatRadioButton
+                    android:id="@+id/dialog_coin_sort_price"
+                    style="@style/CN_DialogItem.Sort"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sort_by_price"
+                    app:drawableStartCompat="@drawable/payments" />
 
-            <CheckBox
-                android:id="@+id/dialog_coin_sort_volume"
-                style="@style/CN_DialogItem"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/dialog_coin_sort_market"
-                android:button="@android:color/transparent"
-                android:text="@string/sort_by_volume"
-                app:drawableStartCompat="@drawable/equalizer" />
+                <androidx.appcompat.widget.AppCompatRadioButton
+                    android:id="@+id/dialog_coin_sort_market"
+                    style="@style/CN_DialogItem.Sort"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sort_by_market"
+                    app:drawableStartCompat="@drawable/account_balance" />
 
-            <CheckBox
-                android:id="@+id/dialog_coin_sort_change"
-                style="@style/CN_DialogItem"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/dialog_coin_sort_volume"
-                android:button="@android:color/transparent"
-                android:text="@string/sort_by_change"
-                app:drawableStartCompat="@drawable/percent" />
+                <androidx.appcompat.widget.AppCompatRadioButton
+                    android:id="@+id/dialog_coin_sort_volume"
+                    style="@style/CN_DialogItem.Sort"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sort_by_volume"
+                    app:drawableStartCompat="@drawable/equalizer" />
 
-            <CheckBox
-                android:id="@+id/dialog_coin_sort_time"
-                style="@style/CN_DialogItem"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/dialog_coin_sort_change"
-                android:button="@android:color/transparent"
-                android:text="@string/sort_by_time"
-                app:drawableStartCompat="@drawable/schedule" />
+                <androidx.appcompat.widget.AppCompatRadioButton
+                    android:id="@+id/dialog_coin_sort_change"
+                    style="@style/CN_DialogItem.Sort"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sort_by_change"
+                    app:drawableStartCompat="@drawable/percent" />
 
-            <Button
-                android:id="@+id/sort_apply"
+                <androidx.appcompat.widget.AppCompatRadioButton
+                    android:id="@+id/dialog_coin_sort_time"
+                    style="@style/CN_DialogItem.Sort"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sort_by_time"
+                    app:drawableStartCompat="@drawable/schedule" />
+            </RadioGroup>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/dialog_coin_sort_time"
-                android:layout_marginStart="@dimen/default_padding"
-                android:layout_marginTop="@dimen/default_padding"
-                android:layout_marginEnd="@dimen/default_padding"
-                android:layout_marginBottom="@dimen/default_padding"
-                android:text="@string/apply" />
+                android:layout_below="@id/rg_sort_type"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/sort_apply"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/default_padding"
+                    android:layout_marginEnd="@dimen/default_padding"
+                    android:layout_marginBottom="@dimen/default_padding"
+                    android:layout_weight="1"
+                    android:backgroundTint="?attr/colorPrimary"
+                    android:text="@string/apply"
+                    android:textColor="?attr/colorOnPrimary" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chip_order_by"
+                    style="@style/Widget.Material3.Chip.Assist.Elevated"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/default_padding"
+                    android:checkable="true"
+                    android:text="@string/sort_by_desc"
+                    app:chipBackgroundColor="?attr/colorSecondaryContainer"
+                    app:chipIcon="@drawable/arrow_downward" />
+            </LinearLayout>
 
         </RelativeLayout>
 </layout>
