--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,16 @@
         <item name="android:textAppearance">@style/TextAppearance.Material3.TitleMedium</item>
     </style>
 
+    <style name="CN_DialogItem.Sort">
+        <item name="android:drawablePadding">@dimen/default_drawable_padding</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:padding">@dimen/default_padding</item>
+        <item name="android:background">?attr/selectableItemBackground</item>
+        <item name="android:textAppearance">@style/TextAppearance.Material3.TitleMedium</item>
+        <item name="android:button">@null</item>
+        <item name="android:drawableEnd">?android:attr/listChoiceIndicatorSingle</item>
+    </style>
+
     <style name="CN_SearchBar" parent="Widget.Material3.SearchBar">
         <item name="shapeAppearanceOverlay">
             @style/ShapeAppearance.Material3.Corner.None
