feat: add sort filter sync between dialog and screen

--- a/app/src/main/res/navigation/nav_root.xml
+++ b/app/src/main/res/navigation/nav_root.xml
@@ -45,6 +45,14 @@
             <argument
                 android:name="coinSortCallback"
                 app:argType="com.hxl.cryptonumismatist.ui.dialogs.coins.CoinSortCallback" />
+            <argument
+                android:name="orderBy"
+                app:argType="com.hxl.presentation.OrderBy"
+                android:defaultValue="DESC" />
+            <argument
+                android:name="sortBy"
+                app:argType="com.hxl.presentation.coin.CoinSortBy"
+                android:defaultValue="RANK" />
         </action>
     </fragment>
     <fragment
@@ -80,5 +88,13 @@
         <argument
             android:name="coinSortCallback"
             app:argType="com.hxl.cryptonumismatist.ui.dialogs.coins.CoinSortCallback" />
+        <argument
+            android:name="orderBy"
+            app:argType="com.hxl.presentation.OrderBy"
+            android:defaultValue="DESC" />
+        <argument
+            android:name="sortBy"
+            app:argType="com.hxl.presentation.coin.CoinSortBy"
+            android:defaultValue="RANK" />
     </dialog>
 </navigation>
