feat(coin-bookmarks): add sort clear option

--- a/app/src/main/res/layout/fragment_bookmarks.xml
+++ b/app/src/main/res/layout/fragment_bookmarks.xml
@@ -69,21 +69,40 @@
                 app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed|snap"
                 android:layout_height="wrap_content">
 
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip_coin_bookmark_sort"
-                    style="@style/Widget.Material3.Chip.Input.Icon.Elevated"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:layout_collapseMode="pin"
                     android:layout_marginStart="@dimen/default_padding"
                     android:layout_marginTop="@dimen/coin_search_bar_height"
                     android:layout_marginBottom="@dimen/default_padding_small"
-                    android:checkable="false"
-                    android:checked="false"
-                    android:elevation="0dp"
-                    android:text="@string/sort_by"
-                    app:closeIcon="@drawable/sort"
-                    app:layout_collapseMode="pin"
-                    tools:text="Sort by" />
+                    android:orientation="horizontal">
+
+                    <com.google.android.material.chip.Chip
+                        android:id="@+id/chip_coin_bookmark_sort"
+                        style="@style/Widget.Material3.Chip.Input.Icon.Elevated"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:checkable="false"
+                        android:checked="false"
+                        android:elevation="0dp"
+                        android:text="@string/sort_by"
+                        app:closeIcon="@drawable/sort"
+                        tools:text="Sort by" />
+
+                    <com.google.android.material.chip.Chip
+                        android:id="@+id/chip_coin_bookmark_sort_delete"
+                        style="@style/Widget.Material3.Chip.Input.Icon.Elevated"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/default_padding_small"
+                        android:checkable="false"
+                        android:elevation="0dp"
+                        android:visibility="gone"
+                        app:checkedIconEnabled="false"
+                        app:textEndPadding="0dp"
+                        app:textStartPadding="4dp" />
+                </LinearLayout>
 
                 <Toolbar
                     android:layout_width="match_parent"
