--- a/app/src/main/res/layout/fragment_coin_details.xml
+++ b/app/src/main/res/layout/fragment_coin_details.xml
@@ -55,134 +55,120 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <LinearLayout
-                        android:id="@+id/top_container"
+                    <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/details_header_container_size"
-                        android:background="?attr/statusBarColor"
-                        android:gravity="center|fill_horizontal"
-                        android:orientation="horizontal"
-                        android:paddingLeft="@dimen/default_padding"
-                        android:paddingRight="@dimen/default_padding">
+                        android:layout_height="match_parent"
+                        android:background="?attr/android:colorBackground"
+                        android:paddingBottom="@dimen/default_padding">
 
-                        <HorizontalScrollView
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:fadeScrollbars="true"
-                            android:fadingEdgeLength="4dp"
-                            android:requiresFadingEdge="horizontal"
-                            android:scrollbarSize="0dp">
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                android:orientation="horizontal">
-
-                                <androidx.appcompat.widget.AppCompatImageView
-                                    android:id="@+id/img_detail_coin"
-                                    android:layout_width="@dimen/details_header_img_size"
-                                    android:layout_height="match_parent"
-                                    tools:src="@drawable/logo" />
-
-                                <com.google.android.material.textview.MaterialTextView
-                                    android:id="@+id/tv_name"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="match_parent"
-                                    android:gravity="center|start"
-                                    android:maxEms="14"
-                                    android:maxLines="1"
-                                    android:padding="8dp"
-                                    android:text="@{name}"
-                                    android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
-                                    android:textColor="?attr/colorOnSecondaryContainer"
-                                    app:autoSizeTextType="uniform"
-                                    tools:text="Name" />
-
-                                <com.google.android.material.textview.MaterialTextView
-                                    android:id="@+id/tv_symbol"
-                                    android:layout_width="0dp"
-                                    android:layout_height="match_parent"
-                                    android:layout_weight="1"
-                                    android:gravity="center|start"
-                                    android:maxLines="1"
-                                    android:paddingTop="4dp"
-                                    android:text='@{"(" + symbol + ")"}'
-                                    android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
-                                    android:textColor="?attr/colorOnSecondaryContainer"
-                                    app:autoSizeMaxTextSize="24sp"
-                                    app:autoSizeTextType="uniform"
-                                    tools:text="(SMBL)" />
-                            </LinearLayout>
-                        </HorizontalScrollView>
+                        <com.google.android.material.appbar.MaterialToolbar
+                            android:id="@+id/details_top_app_bar"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingRight="@dimen/default_padding_tiny"
+                            app:navigationIcon="@drawable/arrow_back" />
 
                         <CheckBox
                             android:id="@+id/cb_bookmark"
                             style="@style/CN_Bookmark"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
+                            android:layout_alignBottom="@id/details_top_app_bar"
+                            android:layout_alignParentTop="true"
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginEnd="@dimen/default_padding_small"
                             android:button="@drawable/sl_bookmark" />
 
-                    </LinearLayout>
+                        <androidx.appcompat.widget.AppCompatImageView
+                            android:id="@+id/img_detail_coin"
+                            android:layout_width="64dp"
+                            android:layout_height="wrap_content"
+                            android:layout_alignBottom="@id/details_top_app_bar"
+                            android:layout_alignParentStart="true"
+                            android:layout_alignParentTop="true"
+                            android:layout_marginStart="48dp"
+                            android:padding="@dimen/default_padding_small"
+                            tools:src="@drawable/logo" />
 
-                    <LinearLayout
-                        android:id="@+id/price_container"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="?attr/statusBarColor"
-                        android:gravity="center"
-                        android:orientation="horizontal"
-                        android:paddingLeft="@dimen/default_padding"
-                        android:paddingRight="@dimen/default_padding">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignBottom="@id/details_top_app_bar"
+                            android:layout_alignParentTop="true"
+                            android:layout_toStartOf="@id/cb_bookmark"
+                            android:layout_toRightOf="@id/img_detail_coin"
+                            android:gravity="center_vertical"
+                            android:orientation="vertical"
+                            android:paddingStart="@dimen/default_padding_small">
+
+                            <com.google.android.material.textview.MaterialTextView
+                                android:id="@+id/tv_name"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center|start"
+                                android:maxLines="1"
+                                android:text="@{name}"
+                                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
+                                android:textColor="?attr/colorOnBackground"
+                                android:textStyle="bold"
+                                app:autoSizeMinTextSize="16sp"
+                                app:autoSizeTextType="uniform"
+                                tools:text="Name" />
+
+                            <com.google.android.material.textview.MaterialTextView
+                                android:id="@+id/tv_symbol"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@{symbol}"
+                                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
+                                android:textColor="?attr/colorOnSurfaceVariant"
+                                tools:text="SMBL" />
+
+                        </LinearLayout>
 
                         <com.google.android.material.textview.MaterialTextView
                             android:id="@+id/tv_price"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
+                            android:layout_below="@id/details_top_app_bar"
+                            android:layout_alignStart="@id/details_top_app_bar"
+                            android:layout_marginStart="@dimen/default_padding"
+                            android:layout_marginTop="@dimen/default_padding_small"
                             android:maxLines="1"
-                            android:text='@{price + currency}'
+                            android:text='@{currency + price}'
                             android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
-                            android:textColor="?attr/colorOnSecondaryContainer"
+                            android:textColor="?attr/colorOnBackground"
+                            android:textStyle="bold"
                             tools:text="123,456,789.12$" />
 
                         <com.google.android.material.textview.MaterialTextView
                             android:id="@+id/tv_change"
-                            android:layout_width="0dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:layout_weight="1"
+                            android:layout_below="@id/details_top_app_bar"
+                            android:layout_alignTop="@id/tv_price"
+                            android:layout_toEndOf="@id/tv_price"
                             android:gravity="top"
                             android:maxLines="1"
                             android:paddingLeft="8dp"
                             android:text='@{ chSmbl + change + "%"}'
-                            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
-                            android:textColor="?attr/colorOnSecondaryContainer"
+                            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
+                            android:textColor="?attr/colorOnBackground"
                             tools:text="▾123.45%" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/time_container"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="?attr/statusBarColor"
-                        android:gravity="center|start"
-                        android:orientation="horizontal"
-                        android:paddingLeft="@dimen/default_padding"
-                        android:paddingTop="@dimen/default_padding_small"
-                        android:paddingRight="@dimen/default_padding"
-                        android:paddingBottom="@dimen/default_padding_small">
 
                         <com.google.android.material.textview.MaterialTextView
                             android:id="@+id/tv_timestamp"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
+                            android:layout_below="@id/tv_price"
+                            android:layout_alignStart="@id/tv_price"
                             android:maxLines="1"
                             android:text='@{timestamp}'
-                            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
-                            android:textColor="?attr/colorOnSecondaryContainer"
+                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
+                            android:textColor="?attr/colorOnSurfaceVariant"
                             tools:text="23:45, 1 Jan 1971" />
 
-                    </LinearLayout>
+                    </RelativeLayout>
 
                     <RelativeLayout
                         android:id="@+id/graph_container"
@@ -193,7 +179,7 @@
                         <com.github.mikephil.charting.charts.LineChart
                             android:id="@+id/price_graph"
                             android:layout_width="match_parent"
-                            android:layout_height="@dimen/error_icon_height"
+                            android:layout_height="@dimen/graph_height"
                             android:padding="@dimen/default_padding" />
 
                         <HorizontalScrollView
@@ -201,7 +187,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_alignTop="@id/price_graph"
-                            android:layout_marginTop="@dimen/error_icon_height"
+                            android:layout_marginTop="@dimen/graph_height"
                             android:scrollbarSize="0dp">
 
                             <com.google.android.material.chip.ChipGroup
@@ -270,27 +256,27 @@
                         <ProgressBar
                             android:id="@+id/pb_graph"
                             android:layout_width="wrap_content"
-                            android:layout_height="@dimen/error_icon_height"
+                            android:layout_height="@dimen/graph_height"
                             android:layout_centerHorizontal="true"
                             android:visibility="gone" />
 
                         <ImageView
                             android:id="@+id/icon_graph_wifi_off"
                             android:layout_width="@dimen/error_icon_width"
-                            android:layout_height="@dimen/error_icon_height"
+                            android:layout_height="@dimen/graph_height"
                             android:layout_centerHorizontal="true"
+                            android:importantForAccessibility="no"
                             android:src="@drawable/wifi_off"
-                            android:visibility="gone"
-                            android:importantForAccessibility="no" />
+                            android:visibility="gone" />
 
                         <ImageView
                             android:id="@+id/icon_graph_error"
                             android:layout_width="@dimen/error_icon_width"
-                            android:layout_height="@dimen/error_icon_height"
+                            android:layout_height="@dimen/graph_height"
                             android:layout_centerHorizontal="true"
+                            android:importantForAccessibility="no"
                             android:src="@drawable/error"
-                            android:visibility="gone"
-                            android:importantForAccessibility="no" />
+                            android:visibility="gone" />
 
                         <com.google.android.material.textview.MaterialTextView
                             android:id="@+id/graph_error_text"
