--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -15,4 +15,9 @@
         android:name="com.hxl.coinfuse.ui.fragments.bookmarks.BookmarksFragment"
         android:label="fragment_bookmarks"
         tools:layout="@layout/fragment_bookmarks" />
+    <fragment
+        android:id="@+id/exchangeFragment"
+        android:name="com.hxl.coinfuse.ui.fragments.exchanges.ExchangeFragment"
+        android:label="ExchangeFragment"
+        tools:layout="@layout/fragment_exchange"/>
 </navigation>
